--- a/index.html
+++ b/index.html
@@ -33,14 +33,57 @@
         <h3 class="mb-4 text-center">
             <img src="https://test.iprofevolution.com/neuroject/assets/neuroject.png" alt="neuroject" class="img-fluid" style="max-width: 300px;">
         </h3>
+        <div class="col-sm"></div>
+        <h2 class="text-center mt-5 mb-4">Alphabet Choices</h2>
         <div class="row mb-5">
             <div class="col-sm"></div>
-            <div class="col-sm d-flex justify-content-center">
-                <!--    aqui colocar o teclado-->
+                <div class="container-centraliza">
+                    <div class="col-sm d-flex ">
+                <!-- Teclado -->
+                <div class="container container-teclado">
+                    <div class="row mt-2 justify-content-center">
+                        <div class="col col-md-9 d-flex">
+                            <div class="mt-2 teclado">Q</div>
+                            <div class="mt-2 teclado">W</div>
+                            <div class="mt-2 teclado">E</div>
+                            <div class="mt-2 teclado">R</div>
+                            <div class="mt-2 teclado">T</div>
+                            <div class="mt-2 teclado">Y</div>
+                            <div class="mt-2 teclado">U</div>
+                            <div class="mt-2 teclado">I</div>
+                            <div class="mt-2 teclado">O</div>
+                            <div class="mt-2 teclado">P</div>
+                        </div>
+                    </div>
+                    <div class="row mt-2 justify-content-center">
+                        <div class="col col-md-8 d-flex">
+                            <div class="mt-2 teclado">A</div>
+                            <div class="mt-2 teclado">S</div>
+                            <div class="mt-2 teclado">D</div>
+                            <div class="mt-2 teclado">F</div>
+                            <div class="mt-2 teclado">G</div>
+                            <div class="mt-2 teclado">H</div>
+                            <div class="mt-2 teclado">J</div>
+                            <div class="mt-2 teclado">K</div>
+                            <div class="mt-2 teclado">L</div>
+                        </div>
+                    </div>
+                    <div class="row mt-2 mb-2">
+                        <div class="col col-md-6 d-flex justify-content-center">
+                            <div class="mt-2 teclado-b">Z</div>
+                            <div class="mt-2 teclado-b">X</div>
+                            <div class="mt-2 teclado-b">C</div>
+                            <div class="mt-2 teclado-b">V</div>
+                            <div class="mt-2 teclado-b">B</div>
+                            <div class="mt-2 teclado-b">N</div>
+                            <div class="mt-2 teclado-b">M</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-sm"></div>
-        <div class="col text-center">
+        <div class=" mt-4 text-center">
             <code>
                 Type an  <strong>Alphabet</strong> on your Keyboard
             </code>
