--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="container container-teclado">
                     <div class="row mt-2 justify-content-center">
                         <div class="col col-md-9 d-flex">
-                            <div class="mt-2 teclado">Q</div>
+                            <div class="mt-2 teclado" id="tq" onclick="teclaQ()">Q</div>
                             <div class="mt-2 teclado">W</div>
                             <div class="mt-2 teclado">E</div>
                             <div class="mt-2 teclado">R</div>
@@ -68,15 +68,15 @@
                             <div class="mt-2 teclado">L</div>
                         </div>
                     </div>
-                    <div class="row mt-2 mb-2">
-                        <div class="col col-md-6 d-flex justify-content-center">
-                            <div class="mt-2 teclado-b">Z</div>
-                            <div class="mt-2 teclado-b">X</div>
-                            <div class="mt-2 teclado-b">C</div>
-                            <div class="mt-2 teclado-b">V</div>
-                            <div class="mt-2 teclado-b">B</div>
-                            <div class="mt-2 teclado-b">N</div>
-                            <div class="mt-2 teclado-b">M</div>
+                    <div class="row mt-2 mb-2 justify-content-center">
+                        <div class="col-10 col-md-7 d-flex">
+                            <div class="mt-2 teclado">Z</div>
+                            <div class="mt-2 teclado">X</div>
+                            <div class="mt-2 teclado">C</div>
+                            <div class="mt-2 teclado">V</div>
+                            <div class="mt-2 teclado">B</div>
+                            <div class="mt-2 teclado">N</div>
+                            <div class="mt-2 teclado">M</div>
                         </div>
                     </div>
                 </div>
