Changes to keyboard styling and format, and responsiveness changes have also been introduced with Bootstrap

--- a/index.html
+++ b/index.html
@@ -34,49 +34,59 @@
             <img src="https://test.iprofevolution.com/neuroject/assets/neuroject.png" alt="neuroject" class="img-fluid" style="max-width: 300px;">
         </h3>
         <div class="col-sm"></div>
-        <h2 class="text-center mt-5 mb-4">Alphabet Choices</h2>
-        <div class="row mb-5">
+        <h3 class="text-center mt-5 mb-4">Alphabet Choices</h3>
+        <div class="row">
             <div class="col-sm"></div>
                 <div class="container-centraliza">
                     <div class="col-sm d-flex ">
                 <!-- Teclado -->
-                <div class="container container-teclado">
-                    <div class="row mt-2 justify-content-center">
-                        <div class="col col-md-9 d-flex">
-                            <div class="mt-2 teclado" id="tq" onclick="teclaQ()">Q</div>
-                            <div class="mt-2 teclado">W</div>
-                            <div class="mt-2 teclado">E</div>
-                            <div class="mt-2 teclado">R</div>
-                            <div class="mt-2 teclado">T</div>
-                            <div class="mt-2 teclado">Y</div>
-                            <div class="mt-2 teclado">U</div>
-                            <div class="mt-2 teclado">I</div>
-                            <div class="mt-2 teclado">O</div>
-                            <div class="mt-2 teclado">P</div>
+                <div class="container">
+                    <div class="row justify-content-md-center">
+                        <div class="col col-md-3">
+
                         </div>
-                    </div>
-                    <div class="row mt-2 justify-content-center">
-                        <div class="col col-md-8 d-flex">
-                            <div class="mt-2 teclado">A</div>
-                            <div class="mt-2 teclado">S</div>
-                            <div class="mt-2 teclado">D</div>
-                            <div class="mt-2 teclado">F</div>
-                            <div class="mt-2 teclado">G</div>
-                            <div class="mt-2 teclado">H</div>
-                            <div class="mt-2 teclado">J</div>
-                            <div class="mt-2 teclado">K</div>
-                            <div class="mt-2 teclado">L</div>
+                        <div class="col col-md-auto container-teclado">
+                            <div class="row justify-content-center">
+                                <div class="col col-sm-12 col-md-12 d-flex">
+                                    <div class="teclado" id="tq" onclick="teclaQ()">Q</div>
+                                    <div class="teclado">W</div>
+                                    <div class="teclado">E</div>
+                                    <div class="teclado">R</div>
+                                    <div class="teclado">T</div>
+                                    <div class="teclado">Y</div>
+                                    <div class="teclado">U</div>
+                                    <div class="teclado">I</div>
+                                    <div class="teclado">O</div>
+                                    <div class="teclado">P</div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="col-11  col-sm-11 col-md-11 d-flex">
+                                    <div class="mt-2 teclado">A</div>
+                                    <div class="mt-2 teclado">S</div>
+                                    <div class="mt-2 teclado">D</div>
+                                    <div class="mt-2 teclado">F</div>
+                                    <div class="mt-2 teclado">G</div>
+                                    <div class="mt-2 teclado">H</div>
+                                    <div class="mt-2 teclado">J</div>
+                                    <div class="mt-2 teclado">K</div>
+                                    <div class="mt-2 teclado">L</div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="col-8  col-sm-8  col-md-8 d-flex">
+                                    <div class="mt-2 teclado">Z</div>
+                                    <div class="mt-2 teclado">X</div>
+                                    <div class="mt-2 teclado">C</div>
+                                    <div class="mt-2 teclado">V</div>
+                                    <div class="mt-2 teclado">B</div>
+                                    <div class="mt-2 teclado">N</div>
+                                    <div class="mt-2 teclado">M</div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mt-2 mb-2 justify-content-center">
-                        <div class="col-10 col-md-7 d-flex">
-                            <div class="mt-2 teclado">Z</div>
-                            <div class="mt-2 teclado">X</div>
-                            <div class="mt-2 teclado">C</div>
-                            <div class="mt-2 teclado">V</div>
-                            <div class="mt-2 teclado">B</div>
-                            <div class="mt-2 teclado">N</div>
-                            <div class="mt-2 teclado">M</div>
+                        <div class="col col-md-3">
+                            
                         </div>
                     </div>
                 </div>
