--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <!-- Imagem do tipo exame-->
+        <!-- Imagem do tipo de exame-->
         <h3 class="mb-4 text-center">
             <img src="https://test.iprofevolution.com/neuroject/assets/neuroject.png" alt="neuroject" class="img-fluid" style="max-width: 300px;">
         </h3>
